@@ -767,7 +767,37 @@ public class EditPane extends JPanel implements BufferSetListener
 	EditPane(View view, BufferSet bufferSetSource, Buffer buffer)
 	{
 		super(new BorderLayout());
-		bufferSet = new BufferSet(bufferSetSource);
+        BufferSet.Scope scope = jEdit.getBufferSetManager().getScope();
+        BufferSet source = bufferSetSource;
+        switch (scope)
+        {
+            case editpane:
+                // do nothing
+                break;
+            case view:
+                {
+                    EditPane editPane = view.getEditPane();
+                    if (editPane != null)
+                    {
+                        // if we have an editpane we copy it
+                        source = editPane.getBufferSet();
+                    }
+                }
+                break;
+            case global:
+                View activeView = jEdit.getActiveView();
+                if (activeView != null)
+                {
+                    EditPane editPane = activeView.getEditPane();
+                    if (editPane != null)
+                    {
+                        source = editPane.getBufferSet();
+                    }
+                }
+                break;
+        }
+        bufferSet = new BufferSet(source);
+
 		init = true;
 
 		this.view = view;
